Add volume controls
Closes #12, but might be nice to add a slider in the future.

--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -33,6 +33,10 @@ body > * {
   grid-template-columns: auto 1fr auto;
   align-items: center;
 }
+.volume {
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+}
 div {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
