--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -37,6 +37,10 @@ body > * {
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
 }
+.timings {
+  display: flex;
+  justify-content: space-between;
+}
 div {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
