--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -24,6 +24,8 @@ body > * {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
 }
 .actions > * {
   margin: 0.5em;
