--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -43,10 +43,49 @@ body > * {
   display: flex;
   justify-content: space-between;
 }
+.queue {
+  counter-reset: section;
+}
+.queue-item {
+  cursor: pointer;
+  padding: 0.5em;
+  background-color: var(--hl);
+  display: grid;
+  grid-template-columns: auto auto auto 1fr;
+  grid-template-areas: "a b c c" "a b d e";
+  grid-gap: 0.5em;
+  align-items: center;
+  text-decoration: none;
+  color: var(--fg);
+}
+.queue-item::before {
+  counter-increment: section;
+  content: counter(section);
+  grid-area: a;
+}
+.queue-item > img {
+  grid-area: b;
+}
+.queue-item > .title {
+  grid-area: c;
+}
+.queue-item > .duration {
+  grid-area: d;
+}
+.queue-item > .link {
+  justify-self: end;
+  grid-area: e;
+}
+.queue-item.current {
+  font-weight: bold;
+  border: 1px solid var(--fg);
+}
+/*
 div {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
 }
+*/
 input {
   padding: 0.5em;
   color: var(--fg);
@@ -60,6 +99,7 @@ input[type="submit"] {
 * {
   box-sizing: border-box;
   --bg: #1e1e1e;
+  --hl: #323232;
   --fg: #fff;
   font-family: Segoi;
 }
