--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -87,14 +87,16 @@ div {
   grid-template-columns: 1fr auto 1fr;
 }
 */
-input {
+input,
+button {
   padding: 0.5em;
   color: var(--fg);
   background-color: var(--bg);
   border: 1px solid var(--fg);
   border-radius: 5px;
 }
-input[type="submit"] {
+input[type="submit"],
+button {
   cursor: pointer;
 }
 * {
