--- a/friends_queue/friends_queue.css
+++ b/friends_queue/friends_queue.css
@@ -81,12 +81,26 @@ body > * {
   font-weight: bold;
   border: 1px solid var(--fg);
 }
-/*
-div {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
+/* https://loading.io/css/ */
+.queue-item.loading::before {
+  content: " ";
+  display: block;
+  width: 35px;
+  height: 35px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
-*/
+@keyframes lds-dual-ring {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 input,
 button {
   padding: 0.5em;
